# inevitable-cloud-stack

./: .gitignore  ARCHITECTURE_ANALYSIS.md  CLAUDE.md  PLATFORMFORGE_GATEWAY_INTEGRATION_STATUS.md  README.md  STACK_INVENTORY.md
inevitable/cloud-gateway/: Dockerfile  pyproject.toml  requirements.txt
inevitable/cloud-gateway/cloud_gateway/: __init__.py
inevitable/cloud-gateway/cloud_gateway/app/: __init__.py  dependencies.py  host_router.py  main.py  settings.py  telemetry.py
inevitable/cloud-gateway/cloud_gateway/services/: __init__.py  _loader.py  platformforge.py  prism.py  signalpattern.py
inevitable/cloud-gateway/cloud_gateway/workers/: __init__.py  celery_app.py
inevitable/cloud-gateway/tests/: test_app_smoke.py
inevitable/core-identity/: .env.example  COMPLETE_SECURITY_STATUS.md  COMPREHENSIVE_SECURITY_STATUS_REPORT_2025.md  CRITICAL_SECURITY_VULNERABILITIES_FIXED.md  Dockerfile  PLATFORM_FORGE_FINAL_SECURITY_ASSESSMENT.md  README.md  SECURITY_FIX_REPORT.md  SECURITY_REMEDIATION_PROGRAM_2025.md  alembic.ini  docker-compose.yml  manifest_applied.yaml  pyproject.toml  requirements.txt
inevitable/core-identity/core_identity/: __init__.py  tenant.py
inevitable/core-identity/docs/: API_REFERENCE.md  DEPLOYMENT.md  MODULES.md  README.md  TESTING_DOCUMENTATION.md  TESTING_GUIDE.md  THREAT_MODEL.md
inevitable/core-identity/modules/admin/: __init__.py  audit_logs.py  crud_generator.py  crud_security.py  enhanced_routes.py  enhanced_routes.py.validation_backup  mfa.py  models.py  routes.py  routes.py.validation_backup  security_config.py  ui_components.py  (+1 more)
(+191 files in other folders)
