[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-gateway"
version = "0.1.0"
description = "FastAPI gateway routing Invitable product packages by host and prefix"
authors = [
    { name = "Invitable" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.2.1",
    "celery>=5.3.6",
    "opentelemetry-sdk>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cloud_gateway*"]
